[gd_scene load_steps=35 format=3 uid="uid://blfvxl8ygxe5r"]

[ext_resource type="Script" path="res://Scripts/NeoMonsters/MonsterStatTracker.gd" id="1_ck5j5"]
[ext_resource type="Script" path="res://Scripts/NeoMonsters/monster_ai.gd" id="1_yguvp"]
[ext_resource type="Shader" path="res://Scripts/Shaders/pixelate.gdshader" id="2_cxhw4"]
[ext_resource type="Texture2D" uid="uid://dd8pn8sys5vli" path="res://Assets/Monster1_Pixel_Art/Movement/Idle_Anim/Monster1_Idle_Frame1.png" id="3_2d3bq"]
[ext_resource type="Texture2D" uid="uid://dx0j1nhwyeq10" path="res://Assets/Monster1_Pixel_Art/Movement/Idle_Anim/Monster1_Idle_Frame2.png" id="4_8why7"]
[ext_resource type="Texture2D" uid="uid://g6cwu1vcj1r3" path="res://Assets/Monster1_Pixel_Art/Movement/Idle_Anim/Monster1_Idle_Frame3.png" id="5_qxr5p"]
[ext_resource type="Texture2D" uid="uid://bparvw8gvr5lf" path="res://Assets/Monster1_Pixel_Art/Movement/Idle_Anim/Monster1_Idle_Frame4.png" id="6_kuiob"]
[ext_resource type="Texture2D" uid="uid://c6m23ncd6dj2o" path="res://Assets/Monster1_Pixel_Art/Movement/Idle_Anim/Monster1_Idle_Frame5.png" id="7_na07u"]
[ext_resource type="Texture2D" uid="uid://8573xnadydxv" path="res://Assets/Monster1_Pixel_Art/Movement/Idle_Anim/Monster1_Idle_Frame6.png" id="8_epfhy"]
[ext_resource type="Texture2D" uid="uid://bk037fm38q7ix" path="res://Assets/Monster1_Pixel_Art/Movement/Idle_Anim/Monster1_Idle_Frame7.png" id="9_41dto"]
[ext_resource type="Texture2D" uid="uid://be4jjsijljkwm" path="res://Assets/Monster1_Pixel_Art/Movement/Idle_Anim/Monster1_Idle_Frame8.png" id="10_mw40s"]
[ext_resource type="Texture2D" uid="uid://p144nfb3i5je" path="res://Assets/Monster1_Pixel_Art/Movement/Idle_Anim/Monster1_Idle_Frame9.png" id="11_6sjqp"]
[ext_resource type="Texture2D" uid="uid://dnj0sevpqi2ua" path="res://Assets/Monster1_Pixel_Art/Movement/Jump_Anim/Monster1_Jump_Frame2.png" id="12_6rqoi"]
[ext_resource type="Texture2D" uid="uid://d3gc3qripv7ld" path="res://Assets/Monster1_Pixel_Art/Movement/Jump_Anim/Monster1_Jump_Frame3.png" id="13_jvp1v"]
[ext_resource type="Texture2D" uid="uid://bsfdimq1ovsmk" path="res://Assets/Monster1_Pixel_Art/Movement/Jump_Anim/Monster1_Jump_Frame4.png" id="14_2udwl"]
[ext_resource type="Texture2D" uid="uid://b48t0tfhf0tcw" path="res://Assets/Monster1_Pixel_Art/Movement/Walk_Left/Monster1_Walk_Left_Frame1.png" id="15_7bv21"]
[ext_resource type="Texture2D" uid="uid://b20076qcn0qtv" path="res://Assets/Monster1_Pixel_Art/Movement/Walk_Left/Monster1_Walk_Left_Frame2.png" id="16_7adw1"]
[ext_resource type="Texture2D" uid="uid://cexsgg28m66b1" path="res://Assets/Monster1_Pixel_Art/Movement/Walk_Right/Monster1_Walk_Right_Frame1.png" id="17_xdacx"]
[ext_resource type="Texture2D" uid="uid://bkw4a0doohbw2" path="res://Assets/Monster1_Pixel_Art/Movement/Walk_Right/Monster1_Walk_Right_Frame2.png" id="18_cgtx0"]
[ext_resource type="Texture2D" uid="uid://dj2yidfqtpnfc" path="res://Assets/Monster1_Pixel_Art/Faces/Grumpy_Face/Monster1_Face_Grumpy_Frame1.png" id="19_hpuhm"]
[ext_resource type="Texture2D" uid="uid://crmupsfsspuk3" path="res://Assets/Monster1_Pixel_Art/Faces/Grumpy_Face/Monster1_Face_Grumpy_Frame2.png" id="20_2ybam"]
[ext_resource type="Texture2D" uid="uid://cgcx5d2h1ukcn" path="res://Assets/Monster1_Pixel_Art/Faces/Hungry_Face/Monster1_Face_Hungry_Frame1.png" id="21_2pq6h"]
[ext_resource type="Texture2D" uid="uid://s5iawa2a28uf" path="res://Assets/Monster1_Pixel_Art/Faces/Hungry_Face/Monster1_Face_Hungry_Frame2.png" id="22_qoo32"]
[ext_resource type="Texture2D" uid="uid://7hx26xr76y2c" path="res://Assets/Monster1_Pixel_Art/Faces/Idle_Face/Monster1_Face_Idle_Frame1.png" id="23_7fw8a"]
[ext_resource type="Texture2D" uid="uid://da50s41b6rv4u" path="res://Assets/Monster1_Pixel_Art/Faces/Idle_Face/Monster1_Face_Idle_Frame2.png" id="24_6hq54"]
[ext_resource type="Texture2D" uid="uid://d2sqkxxig7xv3" path="res://Assets/Monster1_Pixel_Art/Faces/Idle_Face/Monster1_Face_Idle_Frame3.png" id="25_7awks"]
[ext_resource type="Texture2D" uid="uid://bk8ie8umh8lwi" path="res://Assets/Monster1_Pixel_Art/Faces/Idle_Face/Monster1_Face_Idle_Frame4.png" id="26_chnq8"]
[ext_resource type="Texture2D" uid="uid://cw3bv8322m70l" path="res://Assets/Monster1_Pixel_Art/Faces/Sleepy_Face/Monster1_Face_Sleepy_Frame1.png" id="27_rhajl"]
[ext_resource type="Texture2D" uid="uid://bnl6sdkuljdwf" path="res://Assets/Monster1_Pixel_Art/Faces/Sleepy_Face/Monster1_Face_Sleepy_Frame2.png" id="28_0w0m7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ikv8f"]
size = Vector2(264, 314)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nokcq"]
shader = ExtResource("2_cxhw4")
shader_parameter/x_pixel_size = 6
shader_parameter/y_pixel_size = 6
shader_parameter/noise_intensity = 0.5
shader_parameter/seed = 0.5

[sub_resource type="SpriteFrames" id="SpriteFrames_ye6ew"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_2d3bq")
}, {
"duration": 1.0,
"texture": ExtResource("4_8why7")
}, {
"duration": 1.0,
"texture": ExtResource("5_qxr5p")
}, {
"duration": 1.0,
"texture": ExtResource("6_kuiob")
}, {
"duration": 1.0,
"texture": ExtResource("7_na07u")
}, {
"duration": 1.0,
"texture": ExtResource("8_epfhy")
}, {
"duration": 1.0,
"texture": ExtResource("9_41dto")
}, {
"duration": 1.0,
"texture": ExtResource("10_mw40s")
}, {
"duration": 1.0,
"texture": ExtResource("11_6sjqp")
}],
"loop": true,
"name": &"Idle_Animation",
"speed": 5.0
}, {
"frames": [{
"duration": 2.0,
"texture": ExtResource("12_6rqoi")
}, {
"duration": 1.0,
"texture": ExtResource("13_jvp1v")
}, {
"duration": 1.0,
"texture": ExtResource("14_2udwl")
}, {
"duration": 1.0,
"texture": ExtResource("13_jvp1v")
}, {
"duration": 1.0,
"texture": ExtResource("12_6rqoi")
}],
"loop": false,
"name": &"Jump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("15_7bv21")
}, {
"duration": 1.0,
"texture": ExtResource("16_7adw1")
}],
"loop": true,
"name": &"Walk_Left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("17_xdacx")
}, {
"duration": 1.0,
"texture": ExtResource("18_cgtx0")
}],
"loop": true,
"name": &"Walk_Right",
"speed": 5.0
}]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_73lg3"]
shader = ExtResource("2_cxhw4")
shader_parameter/x_pixel_size = 6
shader_parameter/y_pixel_size = 6
shader_parameter/noise_intensity = 0.5
shader_parameter/seed = 0.5

[sub_resource type="SpriteFrames" id="SpriteFrames_glfwb"]
animations = [{
"frames": [{
"duration": 2.0,
"texture": ExtResource("19_hpuhm")
}, {
"duration": 2.0,
"texture": ExtResource("20_2ybam")
}, {
"duration": 2.0,
"texture": ExtResource("19_hpuhm")
}, {
"duration": 2.0,
"texture": ExtResource("20_2ybam")
}],
"loop": true,
"name": &"Grumpy_Face",
"speed": 5.0
}, {
"frames": [{
"duration": 2.0,
"texture": ExtResource("21_2pq6h")
}, {
"duration": 2.0,
"texture": ExtResource("22_qoo32")
}, {
"duration": 2.0,
"texture": ExtResource("21_2pq6h")
}, {
"duration": 2.0,
"texture": ExtResource("22_qoo32")
}],
"loop": true,
"name": &"Hungry_Face",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("23_7fw8a")
}, {
"duration": 1.0,
"texture": ExtResource("24_6hq54")
}, {
"duration": 1.0,
"texture": ExtResource("23_7fw8a")
}],
"loop": true,
"name": &"Idle_Face",
"speed": 5.0
}, {
"frames": [{
"duration": 2.0,
"texture": ExtResource("25_7awks")
}, {
"duration": 2.0,
"texture": ExtResource("24_6hq54")
}],
"loop": true,
"name": &"Move_Left_Face",
"speed": 5.0
}, {
"frames": [{
"duration": 2.0,
"texture": ExtResource("26_chnq8")
}, {
"duration": 2.0,
"texture": ExtResource("24_6hq54")
}],
"loop": true,
"name": &"Move_Right_Face",
"speed": 5.0
}, {
"frames": [{
"duration": 2.0,
"texture": ExtResource("27_rhajl")
}, {
"duration": 2.0,
"texture": ExtResource("28_0w0m7")
}, {
"duration": 2.0,
"texture": ExtResource("27_rhajl")
}, {
"duration": 2.0,
"texture": ExtResource("28_0w0m7")
}],
"loop": true,
"name": &"Sleepy_Face",
"speed": 5.0
}]

[node name="BlueMonster" type="Node2D"]
script = ExtResource("1_ck5j5")

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
platform_floor_layers = 4294901760
script = ExtResource("1_yguvp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
position = Vector2(-6, -2)
shape = SubResource("RectangleShape2D_ikv8f")

[node name="Body" type="AnimatedSprite2D" parent="CharacterBody2D"]
material = SubResource("ShaderMaterial_nokcq")
sprite_frames = SubResource("SpriteFrames_ye6ew")
animation = &"Idle_Animation"
autoplay = "Idle_Animation"

[node name="Face" type="AnimatedSprite2D" parent="CharacterBody2D"]
material = SubResource("ShaderMaterial_73lg3")
position = Vector2(-6, -7)
sprite_frames = SubResource("SpriteFrames_glfwb")
animation = &"Idle_Face"
autoplay = "Idle_Face"

[connection signal="grumpy_signal" from="." to="CharacterBody2D" method="play_grumpy_Face"]
[connection signal="hungry_signal" from="." to="CharacterBody2D" method="play_hungry_Face"]
[connection signal="idle_signal" from="." to="CharacterBody2D" method="play_idle_Face"]
[connection signal="sleepy_signal" from="." to="CharacterBody2D" method="play_sleepy_Face"]
